add window size to container, maximize window before each test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: testcafe/testcafe
     environment:
       - NODE_PATH=/opt/testcafe/node_modules:/opt
+      - SCREEN_WIDTH=1920
+      - SCREEN_HEIGHT=1080
     volumes:
     - ./tests:/tests
     - ./screenshots:/screenshots
